[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Interactable.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sheets/entities.png" type="Texture" id=2]
[ext_resource path="res://Scripts/LinkerMovement.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 16, 2, 32, 30 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 25, 23, 39 )

[node name="LinkerMovement" type="Node2D"]
script = ExtResource( 3 )

[node name="Interactable" type="StaticBody2D" parent="."]
position = Vector2( 16, 0 )
collision_layer = 5
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
shape = SubResource( 1 )

[node name="Joiner" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Joiner"]
position = Vector2( -16, 0 )
shape = SubResource( 2 )

[node name="Plate" type="Sprite" parent="."]
position = Vector2( -16, 0 )
texture = SubResource( 3 )

[node name="Controller" type="Sprite" parent="."]
position = Vector2( 16, -8 )
texture = SubResource( 4 )

[connection signal="is_used_by" from="Interactable" to="." method="_on_Interactable_is_used_by"]
[connection signal="body_entered" from="Joiner" to="." method="_on_Joiner_body_entered"]
[connection signal="body_exited" from="Joiner" to="." method="_on_Joiner_body_exited"]
